cif/org.eclipse.escet.cif.tests/tests/event_based/supervisor_synthesis/plant_sup.run.err
ERROR: Failed to create supervisor for CIF file "event_based/supervisor_synthesis/plant_sup.cif".
CAUSE: CIF supervisor synthesis tool failed due to unsatisfied preconditions:

  ---------------------------------------------------------------------------------------
  (1/1) Automaton is a supervisor automaton rather than a plant or requirement automaton.
  ---------------------------------------------------------------------------------------
   * In the top-level scope of the specification:
     - supervisor automaton s:
                            ^
